Jobcard view alignment and style corrected

--- a/Views/wwwroot/css/Customcss.css
+++ b/Views/wwwroot/css/Customcss.css
@@ -3,13 +3,13 @@
     font-size: 15px;
 }
 .opthead {
-    background-color: #1469c0;
-    width: 100%;  
-    padding:3px;
-    padding-top:9px;
-    padding-left:10px;
+    background-color: #556f8f;
+    width: 100%;
+    padding: 3px;
+    padding-top: 9px;
+    padding-left: 10px;
     color: #fff;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Ubuntu', sans-serif;    
 }
 .subbutn {
     font-size: 20px;
